--- a/templates/normal_user_review_write.html
+++ b/templates/normal_user_review_write.html
@@ -66,6 +66,7 @@
                             <option value="3" label = "3"></option>
                             <option value="4" label = "4"></option>
                             <option value="5" label = "5"></option>
+                        </datalist>
                     </div>
                 </div>
                 <div style="height: 42%; border:2px solid #B3B3B3;">
