--- a/templates/normal_user_info_check.html
+++ b/templates/normal_user_info_check.html
@@ -15,58 +15,33 @@
 {% endif %}
 <div id="infoCheckAndUpdate">
     <!-정보 확인 및 수정을 위한 공간 / 폼을 통해 정보 확인 및 갱신-->
-    <form id="infoData" method="POST" enctype="multipart/form-data" action="/change_user_info/" onsubmit="get_layout()">
+    <form id="infoData" method="POST" enctype="multipart/form-data" action="/logout/" onsubmit="get_layout()">
         {% csrf_token %}
         <div style ="overflow:hidden; font-weight:600;font-size:50px;width:80%; display: inline-block;">{# 닉네임은 성,이름으로 대체 #}
-            <input name="last_name"  type="text" value="{{ user.last_name }}" style="border:none;font-weight:600;font-size:50px;width:10%;">
-            <input name="first_name" type="text" value="{{ user.first_name }}" style="border:none;font-weight:1000;font-size:50px;width:20%;">   님
+            <div type="text" style="display:inline; border:none;font-weight:600;font-size:50px;width:10%;">{{ user.last_name }}</div>
+            <div type="text" style="display:inline; font-weight:1000;font-size:50px;width:20%;">{{ user.first_name }}   님</div>
         </div>
         <div style="position:relative;display:inline-block; top:2vh; right:3.7%;float:right;">
             <button id="withdrawal" value="{{ user.id }}">회원 탈퇴</button>
         </div>
         <div id ="info">
-        <div style = "display: inline-block;">
-            {{ user.email }}
-        </div>
-        <div id = "retouch" >
-            <span id="changeMyInfo" style ="text-decoration: none; color:darkred; cursor: pointer" href="javascript:(0)">수정</span>
-        </div>
-        <div>
-            마지막 로그인 일시 {{ user.last_login }}
-        </div>
-        <div>
-            가입일 {{ user.date_joined }}
-        </div>
-        <div>
-            활동 상태 {{ user|check_active }}
-        </div>
-        <div>
-            경고 횟수 {{ user.uWarnCount }}회
-        </div>
+            <div style = "display: inline-block;">
+                {{ user.email }}
+            </div>
+            <div>
+                마지막 로그인 일시 {{ user.last_login }}
+            </div>
+            <div>
+                가입일 {{ user.date_joined }}
+            </div>
+            <div>
+                활동 상태 {{ user|check_active }}
+            </div>
+            <div>
+                경고 횟수 {{ user.uWarnCount }}회
+            </div>
         </div>
     </form>
-    <div id="input_form" hidden>
-        <form method="POST" enctype="multipart/form-data" action="/change_user_info/" onsubmit="get_layout()">
-            {% csrf_token %}
-            <div id="user_name"> {# 닉네임은 성,이름으로 대체 #}
-                <div id="input_user_lname">
-                    성 : <input value="{{ user.last_name }}" placeholder="성을 입력하세요">
-                </div>
-                <div id="input_user_fname">
-                    이름 : <input value="{{ user.first_name }}" placeholder="이름을 입력하세요">
-                </div>
-            </div>
-            <div> {# 이메일 #}
-                <div id="input_user_email">
-                    이메일 : <input value="{{ user.email }}" placeholder="이메일을 입력하세요">
-                </div>
-            </div>
-            <div style="float:right;">
-                <input id="changeBtn" type="submit" value="변경하기">
-                <button id="cancel">취소하기</button>
-            </div>
-        </form>
-    </div>
 </div>
 
 <div id="reviews_div1">
@@ -97,40 +72,8 @@
             URLSearch.set('sorted', data.value)
         }
     }
-
-    window.onload=function() {
-        let a = new URLSearchParams(window.location.search).get('sorted');
-        var b = document.createElement("option");
-        switch (a) {
-            case '2':
-                b.innerText = '추천 순';
-                break;
-            case '3':
-                b.innerText = '정확도 순';
-                break;
-            case '1':
-            default:
-                b.innerText = '최신 순';
-                break;
-        }
-        b.selected = true;
-        b.style.display = 'none';
-        document.getElementById('sort_select_box').appendChild(b);
-    }
 </script>
 <script>
-    document.getElementById("changeMyInfo")
-        .addEventListener("click", () => {
-            document.getElementById("input_form").hidden = false
-            document.getElementById("infoData").hidden = true
-        }, false);
-
-    document.getElementById("cancel")
-        .addEventListener("click", () => {
-            document.getElementById("input_form").hidden = true
-            document.getElementById("infoData").hidden = false
-        }, false);
-
     document.getElementById("withdrawal")
         .addEventListener("click", () => {
             if (!confirm("회원 탈퇴시, 모든 데이터가 삭제됩니다.\n탈퇴하시겠습니까?")) {
@@ -140,20 +83,13 @@
                     headers: { "X-CSRFToken": '{{csrf_token}}' }
                 });
                 $.ajax({
-                    url: '../user_inactivated/',
+                    url: '/user_inactivated/',
                     method: "PUT",
                     dataType: "json",
                     data: document.getElementById("withdrawal").value,
                     success: function (response) {
                         alert("탈퇴되었습니다.");
                         // 로그아웃 후 메인 페이지로 이동하기
-                        $.ajax({
-                            url: '../logout/',
-                            method: "GET",
-                            success: function (res){
-                                window.location.replace("http://127.0.0.1:8000/")
-                            }
-                        })
                     },
                     error: function (e) {
                         alert("회원 탈퇴에 실패하였습니다.")
@@ -161,7 +97,6 @@
                 })
             }
         })
-
 </script>
 <link rel="stylesheet" href="{% static 'css/normalUserInfoCheckTemplate.css' %}">
 <script  src="{% static 'js/normalUserInfoCheckTemplate.js' %}"></script>
