--- a/static/css/normalUserRoomSearchTemplate.scss
+++ b/static/css/normalUserRoomSearchTemplate.scss
@@ -7,13 +7,13 @@
   width:88.54%;
   height:68.687%;
   margin-left:5.73%;
-  margin-top:13.02%;
+  margin-top:3.02%;
 }
 #room_search_filter{
   height:5.88%;
   width:100%;
 }
-#common_info_form{
+#common_info_{
   position:relative;
   margin-top:13.235%;
   margin-left:2.94%;
@@ -47,11 +47,53 @@
   border:3px solid transparent;
   border-radius:12px;
 }
+input[type="range"] {
+    overflow: hidden;
+    height:75%;
+    -webkit-appearance: none;
+    width: 100%;
+    background: transparent;
+    border-radius: 5px;
+
+}
+input[type="range"]:focus {
+	outline: none;
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    border-radius: 5px;
+    border: 2px solid #B3B3B3;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    border-radius: 5px;
+    width: 8%;
+    height: 100%;
+    background: #FFDA6A;
+    outline:2px solid #2C1A4D;
+    box-shadow: 1px 1px 5px #B3B3B3;
+    cursor: pointer;
+    box-shadow: -100vw 0 0 100vw #B3B3B3;
+}
+datalist {
+  display: inline-flex;
+  writing-mode: horizontal-tb;
+  justify-content: space-between;
+  width: 100%;
+}
+.label{
+    float:left;
+    width:100%;
+}
 #common_info_selects::-webkit-scrollbar-track{
   background-color:#FFFFFF;
 }
 #built_year_form{
-  margin-top:14.71%;
+  margin-top:2.71%;
   width:94.12%;
   height:16.18%;
   margin-left:2.94%;
@@ -87,8 +129,8 @@
 }
 #text_form{
   margin-top:6.11%;
-  width:94.12%;
-  height:17.65%;
+  width:100%;
+  height:50.65%;
 }
 #search_address{
   width:100%;
@@ -96,20 +138,20 @@
   line-height:1;
 }
 #address_filter{
-  height:75%;
-  padding-left:3.125%;
+  width:100%;
+  height:50%;
 }
 #address2{
   padding:0;
-  margin-top:7.8125%;
+  margin-top:3.8125%;
   margin-bottom:7.8125%;
   width:93.75%;
-  height:44.44%;
+  height:90%;
 }
 #submit-div{
   width:22.06%;
   height:4.41%;
-  margin-top:27.94%;
+  margin-top:0%;
   margin-left:74.12%;
 }
 #submit{
