--- a/static/css/normalUserRoomWriteTemplate.css
+++ b/static/css/normalUserRoomWriteTemplate.css
@@ -1,9 +1,14 @@
-#tr1 {
-  outline: solid 2px #B3B3B3;
-  height: 10.6%;
-  width: 100%;
-  display: flex;
-  padding: 1.5% 6.25% 1.5% 6.25%;
+#tr1{
+    outline: solid 2px #B3B3B3 ;
+    height: 10.6%;
+    width: 100%;
+    display: flex;
+    padding: 1.5% 6.25% 1.5% 6.25%;
+}
+#tr2{
+    height: 89.39%;
+    width: 100%;
+    padding: 3.03% 6.25% 3.03% 6.25%;
 }
 img{
     width:100%;
