--- a/templates/normal_user_review_write.html
+++ b/templates/normal_user_review_write.html
@@ -3,18 +3,17 @@
 
 {% block main_contents %}
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-    <div id="icons" style="position:relative; display:none; float:left; height:500px; width:200px; border:1px solid green;"></div>
     <div style="width: 100%; height: 100%;">
         <form id="text_review" action="#" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <div id="tr1">
                 <div style="background-color: #A23355 ; color: white; height:100%; width: 10.61% ;
                         text-align: center; margin: 0 auto" id="review_address">주소</div>
-                <input id="id_address" style="float: right; border-color: #A23355;
+                <input id="id_address" style="float: right; border-color: #A23355; height:100%;
                         flex:1" name="address" required>
                 <div style="background-color: #A23355 ; color: white; height:100%; width: 10.61% ;
                         text-align: center; margin: 0 auto" id="review_postcode">우편번호</div>
-                <input id="id_postcode" style="float: right; border-color: #A23355; width:20%;" name="postcode" required>
+                <input id="id_postcode" style="float: right; border-color: #A23355; width:20%; height:100%;" name="postcode" required>
             </div>
             <div id="tr2">
                 <div style="height: 9.09%; width: 100%; margin-bottom: 1.302%;">
@@ -35,8 +34,8 @@
                             </label>
                     </div>
                     <div style="height:100%;width:70%; display: inline-block;">
-                        <label class = "label">방음 <input style ="margin-left:5%;" type="range" id="proof" list="tickmarks1" class="range" min="1" max="5" step="1"></label>
-                        <label class = "label" >일조량 <input style ="margin-left:5%;" type="range" id="sunshine" list="tickmarks2" class="range" min="1" max="5" step="1"></label>
+                        <label class = "label">방음 <input style ="margin-left:5%;" type="range" id="proof" name="proof" list="tickmarks1" class="range" min="1" max="5" step="1"></label>
+                        <label class = "label" >일조량 <input style ="margin-left:5%;" type="range" id="sunshine" name="sunshine" list="tickmarks2" class="range" min="1" max="5" step="1"></label>
                         <datalist id="tickmarks1">
                             <option value="1" label = "1"></option>
                             <option value="2" label = "2"></option>
@@ -51,8 +50,8 @@
                             <option value="4" label = "4"></option>
                             <option value="5" label = "5"></option>
                         </datalist>
-                        <br><label class="label" >청결 <input style ="margin-top: 5%;margin-left:5%;" type="range" id="clean" list="tickmarks3" class="range" min="1" max="5" step="1"></label>
-                        <label class = "label">습도 <input style ="margin-top: 5%;margin-left:12%;" type="range" id="humidity" list="tickmarks4" class="range" min="1" max="5" step="1"></label>
+                        <br><label class="label" >청결 <input style ="margin-top: 5%;margin-left:5%;" type="range" id="clean" name="clean" list="tickmarks3" class="range" min="1" max="5" step="1"></label>
+                        <label class = "label">습도 <input style ="margin-top: 5%;margin-left:12%;" type="range" id="humidity" name="humidity" list="tickmarks4" class="range" min="1" max="5" step="1"></label>
                         <datalist id="tickmarks3">
                             <option value="1" label = "1"></option>
                             <option value="2" label = "2"></option>
