--- a/templates/normal_user_room_write.html
+++ b/templates/normal_user_room_write.html
@@ -1,82 +1,34 @@
 {% extends 'normal_user_base.html' %}
-{% load static %}
+{% load index static %}
 
 {% block main_contents %}
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
-    <script>
-        window.onload = function(){
-            document.getElementById("id_address").addEventListener("click", function(){ //주소입력칸을 클릭하면
-            //카카오 지도 발생
-            new daum.Postcode({
-                oncomplete: function(data) { //선택시 입력값 세팅
-                document.getElementById("id_address").value = data.address; // 주소 넣기
-                document.getElementById("id_postcode").value = data.zonecode; // 우편번호 넣기
-            }}).open();
-            });
-        }
 
-
-        function normalUserRoomWrite(e) {
-            e.preventDefault();
-            var form = new FormData(e.currentTarget);
-            console.log(form);
-            alert('함수 호출')
-            // 원룸 등록
-            $.ajax({
-                type: 'POST',
-                url: "/normal_user_room_write/",
-                async: false,
-                data: form,
-                processData: false,
-                contentType: false,
-                success: function (response) {
-                    // on successfull creating object
-                    {#if(response.get('postcode')){ // 코드 수정 필요함#}
-                    {#    alert(postcode, "이미 등록된 원룸입니다.")#}
-                    {#    window.location.href = '/normal_user_room_read/?postcode='+ response['postcode']#}
-                    {# } #}
-                    {#else{#}
-                        alert("원룸이 등록되었습니다.")
-                        window.location.replace('/normal_user_room_read/?roomId=' + response);
-                    {# } #}
-                },
-                error: function (response) {
-                    // alert the error if any error occured
-
-                    alert("원룸 등록에 실패하였습니다.")
-                    alert(response["responseJSON"]["error"]);
-                }
-            })
-        }
-    {#$("#form_room").submit(normalUserRoomWrite);#}
-    </script>
-    <form style ="width:100%;height:10%;" action="#" method="post" enctype="multipart/form-data">
+    <form id="room" style ="width:100%;height:100%;" action="#" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
-        <div style ="width:100%;height:100%; margin-top:4%;margin-left:4%; ">
-            <div style ="float:left;width:65%;height:100%;display:inline-block;">
-            <div style="background-color: #A23355 ; float: left;color: white; height:60%; width: 15% ;display:inline-block;text-align:center; margin: 0 auto" id="review_address">주소</div>
-                    <input id="id_address" style="width:85%; height:60%;border-color: #A23355;flex:1" name="address" required>
-                </div>
-            <div style ="width:35%;height:100%;display:inline-block;">
-                <div style="background-color: #A23355 ; float:left;color: white; height:60%; width: 20% ;display:inline-block;text-align: center; margin: 0 auto" id="review_postcode">우편번호</div>
-                    <input id="id_postcode" style="float: left; border-color: #A23355; width:60%; height:60%;" name="postcode" required>
-                </div>
-        </div>
-    </form>
-        <div style =" margin-top:4%; margin-left:4%;width:100%; height:85%;">
+        <div id="tr1">
+                <div style="background-color: #A23355 ; color: white; height:100%; width: 10.61% ;
+                        text-align: center; margin: 0 auto" id="room_address">주소</div>
+                <input id="id_address" style="float: right; border-color: #A23355; height:100%;
+                        flex:1" name="room_address" required>
+                <div style="background-color: #A23355 ; color: white; height:100%; width: 10.61% ;
+                        text-align: center; margin: 0 auto" id="postcode">우편번호</div>
+                <input id="id_postcode" style="float: right; border-color: #A23355; width:20%; height:100%;" name="postcode" required>
+            </div>
+        <div id="tr2">
             <div style ="width:48%; height:100%; display: inline-block;float:left;">
             <div style ="width:100%;height:45%;display: inline-block;">
                 <span style ="margin-left:1%;font-weight: 700; font-size:25px;">원룸 정보</span>
-                <br><label style ="margin-top:2.5%;margin-left: 5%;width:20%;"><input type="checkbox" name = "checking" style="margin-right:5%;" value="">주차장</label>
-                <label style ="width:40%;margin-left: 2.5%;"><input type="checkbox" name = "checking" style="margin-right:5%;" value="">엘레베이터</label>
-                <br><label style ="width:100%;margin-left: 2.5%;margin-top:2.5%;">원룸 이름 &nbsp; <input name="name" style="height:25px;" type ="text"></label>
-                <br><label style ="width:100%;margin-left: 2.5%;margin-top:2.5%;">건축 연도 &nbsp; <input name="builtYear" style ="width:20%;height:25px;text-align: center;"type="number" minlength="1900" maxlength="2022" >&nbsp;년도</label>
-                <br><label style ="width:100%;margin-left: 2.5%;margin-top:2.5%;">건물 높이 &nbsp; <input name="buildhigh" style ="width:15%;height:25px;text-align: center;"type ="number" minlength="-1" maxlength="10">&nbsp;층</label>
+                <br><label style ="margin-top:2.5%;margin-left: 5%;width:20%;"><input type="checkbox" name = "commonInfo" style="margin-right:5%;">주차장</label>
+                <label style ="width:40%;margin-left: 2.5%;"><input type="checkbox" name = "commonInfo" style="margin-right:5%;">엘레베이터</label>
+                <br><label style ="width:100%;margin-left: 2.5%;margin-top:2.5%;">원룸 이름 &nbsp; <input id="id_name" name="name" style="height:25px;" type ="text"></label>
+                <br><label style ="width:100%;margin-left: 2.5%;margin-top:2.5%;">건축 연도 &nbsp; <input id="id_builtYear" name="builtYear" style ="width:20%;height:25px;text-align: center;"type="number" minlength="1900" maxlength="2022" >&nbsp;년도</label>
+                <br><label style ="width:100%;margin-left: 2.5%;margin-top:2.5%;">건물 높이 &nbsp; <input id="id_buildingFloorNum" name="buildingFloorNum" style ="width:15%;height:25px;text-align: center;"type ="number" minlength="-1" maxlength="10">&nbsp;층</label>
             </div>
                 <div style ="width:100%;height:55%;">
                     <span style ="margin-left:1%;font-weight: 700; font-size:25px; display: inline-block;">임대인 정보</span>
-                    <br><label style ="width:100%;margin-left: 2.5%;margin-top:2.5%;">연락처 &nbsp;<input name="ownerPhone" style =" margin-left:3%;width:40%; height:25px;text-align: center;"type ="tel"></label>
+                    <br><label style ="width:100%;margin-left: 2.5%;margin-top:2.5%;">연락처 &nbsp;<input id="id_ownerPhone" name="ownerPhone" style =" margin-left:3%;width:40%; height:25px;text-align: center;"type ="tel"></label>
                 </div>
             </div>
             <div style ="width:48%; height:100%; display: inline-block;">
@@ -85,12 +37,62 @@
                 </div>
                     <div style="float: right">
                         <input style ="width:60%;" type="file" class="real-upload" accept="image/*" multiple id="images" name="images">
-                                    <button type="submit">원룸 등록</button>
+                        <input id="room_submit" value="원룸 등록" type="submit" style="background-color: #A4A1A1; border-color:#888888;
+                        color: white">
                     </div>
             </div>
         </div>
-            <script>
-    $("#form_room").submit(normalUserRoomWrite);
+    </form>
+    <script>
+        // 이미지 업로드
+        function getImageFiles(e){
+            const uploadFiles = [];
+            const files = e.currentTarget.files;
+            const imagePreview = document.querySelector('.image-preview');
+
+            [...files].forEach(file => {
+                uploadFiles.push(file);
+
+                const reader = new FileReader();
+                reader.onload = (e) => {
+                    const preview = createElement(e, file);
+                    imagePreview.appendChild(preview);
+                };
+
+              reader.readAsDataURL(file);
+            });
+        }
+
+        function createElement(e, file) {
+          const li = document.createElement('li');
+          const img = document.createElement('img');
+          img.setAttribute('src', e.target.result);
+          img.setAttribute('data-file', file.name);
+          li.appendChild(img);
+
+          return li;
+        }
+        var text = '';
+        const realUpload = document.querySelector('.real-upload');
+        realUpload.addEventListener('change', getImageFiles);
+        {#  리뷰 작성/수정 구분  #}
+        function roomChangePage(){
+            if(window.location.pathname==='/normal_user_room_change/'){
+                document.getElementById('id_address').value= "{{ room.address }}"
+                document.getElementById('id_postcode').value= "{{ room.postcode }}"
+                document.getElementById('id_name').value= "{{ room.name }}"
+                document.getElementById('id_builtYear').value= "{{ room.builtYear }}"
+                document.getElementById('id_buildingFloorNum').value= "{{ room.buildingFloorNum }}"
+                document.getElementById('id_ownerPhone').value= "{{ room.ownerPhone }}"
+                let images = ''
+                {% for img in room.roomImage %}
+                    images += "{{ img }}" // 이미지에 대한 소스코드는 이후 수정 예정
+                {% endfor %}
+                document.getElementsByClassName('image-preview')[0].innerHTML = images
+                document.getElementById('room_submit').value = '원룸 수정'
+            }
+        }
     </script>
-<link rel="stylesheet" href="{% static 'css/normalUserRoomWriteTemplate.css' %}">
+    <link rel="stylesheet" href="{% static 'css/normalUserRoomWriteTemplate.css' %}">
+    <script type="text/javascript" src="{% static 'js/normalUserRoomWriteTemplate.js' %}"></script>
 {% endblock %}
