--- a/static/css/normalUserReviewWriteTemplate.scss
+++ b/static/css/normalUserReviewWriteTemplate.scss
@@ -40,11 +40,14 @@ input[type="range"] {
     border-radius: 5px;
 
 }
-input[type="number"]::-webkit-outer-spin-button,
-input[type="number"]::-webkit-inner-spin-button {
+input[type="range"] {
+    overflow: hidden;
+    height:75%;
     -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
+    width: 90%;
+    background: transparent;
+    border-radius: 5px;
+	
 }
 input[type="range"]:focus {
 	outline: none;
@@ -56,6 +59,7 @@ input[type="range"]::-webkit-slider-runnable-track {
     cursor: pointer;
     border-radius: 5px;
     border: 2px solid #B3B3B3;
+    padding-left:3%;
 }
 
 input[type="range"]::-webkit-slider-thumb {
@@ -74,8 +78,8 @@ datalist {
   display: inline-flex;
   writing-mode: horizontal-tb;
   justify-content: space-between;
-  width: 30%;
-  margin-left: 14%;
+  width: 50%;
+  margin-left: 10%;
 }
 .o{
     display: inline-block;
