--- a/static/css/normalUserRoomWriteTemplate.css
+++ b/static/css/normalUserRoomWriteTemplate.css
@@ -1,33 +1,31 @@
-#tr1{
-    outline: solid 2px #B3B3B3 ;
-    height: 10.6%;
-    width: 100%;
-    display: flex;
-    padding: 1.5% 6.25% 1.5% 6.25%;
-}
-#tr2{
-    height: 89.39%;
-    width: 100%;
-    padding: 3.03% 6.25% 3.03% 6.25%;
-}
-img{
-    width:100%;
-    height:100%;
-    list-style: none;
-    float: left;
-    padding-right:20%;
+#tr1 {
+  outline: solid 2px #B3B3B3;
+  height: 10.6%;
+  width: 100%;
+  display: flex;
+  padding: 1.5% 6.25% 1.5% 6.25%;
 }
 
-.image-preview{
-    width: 50%;
-    height: 100%;
-    display: flex;
-    float: left;
+img {
+  width: 100%;
+  height: 100%;
+  list-style: none;
+  float: left;
+  padding-right: 20%;
 }
-input[type="number"]::-webkit-outer-spin-button,
-input[type="number"]::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
+
+.image-preview {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  float: left;
 }
+
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
 /*# sourceMappingURL=normalUserRoomWriteTemplate.css.map */
