--- a/static/css/normalUserRoomWriteTemplate.css
+++ b/static/css/normalUserRoomWriteTemplate.css
@@ -5,24 +5,27 @@
   display: flex;
   padding: 1.5% 6.25% 1.5% 6.25%;
 }
-img{
-    width:100%;
-    height:100%;
-    list-style: none;
-    float: left;
-    padding-right:20%;
+
+img {
+  width: 100%;
+  height: 100%;
+  list-style: none;
+  float: left;
+  padding-right: 20%;
 }
 
-.image-preview{
-    width: 50%;
-    height: 100%;
-    display: flex;
-    float: left;
+.image-preview {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  float: left;
 }
-input[type="number"]::-webkit-outer-spin-button,
-input[type="number"]::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
+
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
+
 /*# sourceMappingURL=normalUserRoomWriteTemplate.css.map */
