--- a/templates/normal_user_review_read.html
+++ b/templates/normal_user_review_read.html
@@ -182,13 +182,18 @@
         </div>
     </div>
     <div id="row3">
-        <div style="width:14.82%; border-right:2px solid #B3B3B3;"><div style="display: flex;width: 100%;height: 100%;align-items: center;">월세</div></div>
-        <div style="width:13.834%; border-right:2px solid #B3B3B3;"><div style="display: flex;width: 100%;height: 100%;align-items: center;">크기</div></div>
-        <div style="width:12.846%; border-right:2px solid #B3B3B3;"><div style="display: flex;width: 100%;height: 100%;align-items: center;">채광</div></div>
-        <div style="width:12.846%; border-right:2px solid #B3B3B3;"><div style="display: flex;width: 100%;height: 100%;align-items: center;">청결</div></div>
-        <div style="width:12.846%; border-right:2px solid #B3B3B3;"><div style="display: flex;width: 100%;height: 100%;align-items: center;">온도</div></div>
-        <div style="width:12.846%; border-right:2px solid #B3B3B3;"><div style="display: flex;width: 100%;height: 100%;align-items: center;">습도</div></div>
-        <div style="width:19.962%; height:100%;"></div>
+        {% if review.rent == 1 %}
+            <div style="width:14.82%; border-right:2px solid #B3B3B3;"><div style="display: flex;width: 100%;height: 100%;align-items: center;">월세 {{review.monthlyRent}}만원</div></div>
+        {% endif %}
+        <div style="width:14.82%; border-right:2px solid #B3B3B3;"><div style="display: flex;width: 100%;height: 100%;align-items: center;">보증금 {{review.deposit}}만원</div></div>
+        <div style="width:13.834%; border-right:2px solid #B3B3B3;"><div style="display: flex;width: 100%;height: 100%;align-items: center;">크기 {{review.roomSize}}㎡</div></div>
+        <div style="width:12.846%; border-right:2px solid #B3B3B3;"><div style="display: flex;width: 100%;height: 100%;align-items: center;">채광 ☆{{review.lighting}}</div></div>
+        <div style="width:12.846%; border-right:2px solid #B3B3B3;"><div style="display: flex;width: 100%;height: 100%;align-items: center;">청결 ☆{{review.cleanliness}}</div></div>
+        <div style="width:12.846%; border-right:2px solid #B3B3B3;"><div style="display: flex;width: 100%;height: 100%;align-items: center;">방음 ☆{{review.soundproof}}</div></div>
+        <div style="width:12.846%; border-right:2px solid #B3B3B3;"><div style="display: flex;width: 100%;height: 100%;align-items: center;">습도 ☆{{review.humidity}}</div></div>
+        {% if review.rent == 0 %}
+            <div style="width:19.962%; height:100%;"></div>
+        {% endif %}
     </div>
     <div id="row4">
         {% for sentence in review.reviewSentence %}
