--- a/templates/normal_user_main.html
+++ b/templates/normal_user_main.html
@@ -39,7 +39,7 @@ $(document).ready(function(){
                 {# 클릭시 해당 리뷰로 이동하는 링크 필요 #}
                 <div style="color:black; height:10%; font-weight: 600; font-size:20px; cursor:pointer;" onclick="window.location.replace('{{normalUserReviewRead}}?id={{popular_review.id}}')">{{ popular_review.reviewTitle }}</div>
                 <div class="pop-img" style="height:20%;">
-                    <img class="left-side-room-img" style="width:100%; height:100%;" src="{% static 'images/' %}{{ popular_review.additionalImage|first }}">
+                    <img class="left-side-room-img" style="height:100%;" src="{% static 'images/' %}{{ popular_review.additionalImage|first }}">
                 </div>
                 <div style = "display:flex; justify-content:center; height:50%;width:100%;">
                     <div style="width:70%;">
@@ -71,8 +71,8 @@ $(document).ready(function(){
                 </div>
                 {# 클릭시 해당 리뷰로 이동하는 링크 필요 #}
                 <div style="color:black; height:10%; font-weight: 600; font-size:20px; cursor:pointer;" onclick="window.location.replace('{{normalUserReviewRead}}?id={{latest_review.id}}')">{{ latest_review.reviewTitle }}</div>
-                <div class="pop-img" style="height:20%;">
-                    <img class="left-side-room-img" style="width:100%; height:100%;" src="{% static 'images/' %}{{ latest_review.additionalImage|first }}">
+                <div class="pop-img" style="margin:auto;height:20%;">
+                    <img class="left-side-room-img" style=" height:100%;" src="{% static 'images/' %}{{ latest_review.additionalImage|first }}">
                 </div>
                 <div style = "display:flex; justify-content:center; height:50%;width:100%;">
                     <div style="width:70%;">
