--- a/static/css/normalUserRoomWriteTemplate.scss
+++ b/static/css/normalUserRoomWriteTemplate.scss
@@ -6,15 +6,9 @@
   padding: 1.5% 6.25% 1.5% 6.25%;
 }
 #tr2{
-    display:inline-block;
     height: 89.39%;
-    width: 50%;
+    width: 100%;
     padding: 3.03% 6.25% 3.03% 6.25%;
-}
-#tr3{
-    display:inline-block;
-    height: 89.39%;
-    width: 45%;
 }
 img{
     width:100%;
@@ -24,19 +18,11 @@ img{
     padding-right:20%;
 }
 
-#image-preview{
-    width: 100%;
-    height: 20%;
-    margin-top:60%;
+.image-preview{
+    width: 50%;
+    height: 100%;
     display: flex;
     float: left;
-    overflow-x:auto;
-    flex-wrap:nowrap;
-}
-#image-preview > div{
-    height: 100%;
-    display:inline-block;
-    flex:0 0 30%;
 }
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
