--- a/templates/normal_user_room_write.html
+++ b/templates/normal_user_room_write.html
@@ -17,7 +17,7 @@
                 <input id="id_postcode" style="float: right; border-color: #A23355; width:20%; height:100%;" name="postcode" required>
             </div>
         <div id="tr2">
-            <div style ="width:48%; height:80%; float:left;">
+            <div style ="width:48%; height:100%; display: inline-block;float:left;">
                 <div style ="width:100%;height:45%;display: inline-block;">
                     <span style ="margin-left:1%;font-weight: 700; font-size:25px;">원룸 정보</span>
                     <br><label style ="margin-top:2.5%;margin-left: 5%;width:20%;"><input id="commonInfo0" type="checkbox" name = "commonInfo" style="margin-right:5%;">주차장</label>
@@ -31,23 +31,50 @@
                     <br><label style ="width:100%;margin-left: 2.5%;margin-top:2.5%;">연락처 &nbsp;<input id="id_ownerPhone" name="ownerPhone" style =" margin-left:3%;width:40%; height:25px;text-align: center;"type ="tel"></label>
                 </div>
             </div>
-        </div>
-        <div id="tr3">
-            <div style ="width:100%; height:100%;">
-                <div style="padding-top: 3.038%">
-                    <div id="image-preview"></div> {# 업로드한 이미지 띄우는 부분 #}
+            <div style ="width:48%; height:100%;">
+                <div style ="padding-top: 3.038%; width:80%;height:70%;">
+                    <ul class="image-preview"></ul> {# 업로드한 이미지 띄우는 부분 #}
+                </div>
                     <div style="float: right">
-                        <input type="file" class="real-upload" accept="image/*" multiple id="images" name="images">
-                        <input id="review_submit" value="리뷰 등록" type="submit" style="background-color: #A4A1A1; border-color:#888888;
+                        <input style ="width:60%;" type="file" class="real-upload" accept="image/*" multiple id="images" name="images">
+                        <input id="room_submit" value="원룸 등록" type="submit" style="background-color: #A4A1A1; border-color:#888888;
                         color: white">
                     </div>
-                </div>
             </div>
         </div>
     </form>
     <script>
         // 이미지 업로드
+        function getImageFiles(e){
+            const uploadFiles = [];
+            const files = e.currentTarget.files;
+            const imagePreview = document.querySelector('.image-preview');
 
+            [...files].forEach(file => {
+                uploadFiles.push(file);
+
+                const reader = new FileReader();
+                reader.onload = (e) => {
+                    const preview = createElement(e, file);
+                    imagePreview.appendChild(preview);
+                };
+
+              reader.readAsDataURL(file);
+            });
+        }
+
+        function createElement(e, file) {
+          const li = document.createElement('li');
+          const img = document.createElement('img');
+          img.setAttribute('src', e.target.result);
+          img.setAttribute('data-file', file.name);
+          li.appendChild(img);
+
+          return li;
+        }
+        var text = '';
+        const realUpload = document.querySelector('.real-upload');
+        realUpload.addEventListener('change', getImageFiles);
         {#  리뷰 작성/수정 구분  #}
         function roomChangePage(){
             if(window.location.pathname==='/normal_user_room_change/'){
@@ -66,11 +93,9 @@
                     document.getElementById('id_ownerPhone').value= "{{ room.ownerPhone }}"
                 {% endif %}
                 let images = ''
-                {% if room.commonInfo %}
-                    var commonInfo = {{room.commonInfo}};
-                    for (i=0;i<commonInfo.length;i++)
-                        document.getElementById('commonInfo'+(commonInfo[i]-1).toString()).checked=true;
-                {% endif %}
+                var commonInfo = {{room.commonInfo}};
+                for (i=0;i<commonInfo.length;i++)
+                    document.getElementById('commonInfo'+(commonInfo[i]-1).toString()).checked=true;
                 {% for img in room.roomImage %}
                     images += "{{ img }}" // 이미지에 대한 소스코드는 이후 수정 예정
                 {% endfor %}
